[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Spawn/Spawn.gd" type="Script" id=1]
[ext_resource path="res://Levels/Room_statics.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/room_2-long.png" type="Texture" id=3]
[ext_resource path="res://GameParts/Gates/Gate_North.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameParts/Environment/Big_Hole.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameParts/Environment/Block.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameParts/Environment/Small_Hole.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameParts/Dudes/SpringySam/SpringySam.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameParts/Player/Player.tscn" type="PackedScene" id=9]

[node name="Spawn" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 617.724, 320.575 )
scale = Vector2( 2.67, 1.62 )

[node name="room_2-long" type="Sprite" parent="."]
position = Vector2( 623.376, 346.067 )
texture = ExtResource( 3 )

[node name="Gate_North" parent="." instance=ExtResource( 4 )]
position = Vector2( 888.62, -68.9296 )

[node name="Tips" type="Node2D" parent="."]
modulate = Color( 1, 1, 0.8, 1 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="Tips"]
margin_left = 32.6491
margin_top = 36.0501
margin_right = 128.649
margin_bottom = 84.0501
text = "press SPACE 
to pew pew
"

[node name="Label2" type="Label" parent="Tips"]
margin_left = 178.227
margin_top = 187.855
margin_right = 305.227
margin_bottom = 235.855
text = "destroy all enemies
to continue
"

[node name="Big_Hole" parent="." instance=ExtResource( 5 )]
position = Vector2( 515.009, 153.417 )

[node name="Block" parent="." instance=ExtResource( 6 )]
position = Vector2( 511.619, 93.0383 )

[node name="Big_Hole2" parent="." instance=ExtResource( 5 )]
position = Vector2( 452.002, 281.001 )

[node name="Block2" parent="." instance=ExtResource( 6 )]
position = Vector2( 473.714, 215.779 )

[node name="Small_Hole" parent="." instance=ExtResource( 7 )]
position = Vector2( 557.647, 31.668 )

[node name="SpringySam" parent="." instance=ExtResource( 8 )]
position = Vector2( 1208.29, 537.927 )
active = true

[node name="SpringySam2" parent="." instance=ExtResource( 8 )]
position = Vector2( 1311.9, 147.242 )
active = true

[node name="SpringySam3" parent="." instance=ExtResource( 8 )]
position = Vector2( 1080.94, 326.396 )
active = true

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( -128.601, 178.586 )
